src/test/deca/etapeB/invalid/void_cast.deca
// Description:
//    Déclaration de variable
//
// Resultats:
//    Ligne 13 : cast impossible
// 
// Historique:
//    cree le 01/01/2016

{
    int a = 4;
    int b = (void) (a);
}
